[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
bootloader = "0.11.3"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]

[workspace]
members = ["kernel"]