[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.9.8"
uart_16550 = "0.2.18"
x86_64 = "0.14.10"

[package.metadata.bootimage]
test-timeout = 300 #seconds
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
